--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-services:
 
    redis:
       image: redis
@@ -6,19 +5,19 @@ services:
    db:
       image: postgres:9.4
       environment:
-      # - POSTGRES_HOST_AUTH_METHOD=trust
-         POSTGRES_USERNAME: postgres
-         POSTGRES_PASSWORD: postgres
+        - POSTGRES_HOST_AUTH_METHOD=trust
+          #POSTGRES_USERNAME: postgres
+          #POSTGRES_PASSWORD: postgres
 
    vote:
-      image: voting-app
+      image: voteapp
       ports:
          - 8085:80
       links:
          - redis
 
    worker:
-      image: workapp
+      image: workerapp
       links:
          - db
          - redis
